# datviewr

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  input.css  tailwind.config.js
assets/: logo.icns  main.css
src/: client.rs  evil_env.rs  main.rs  model.rs
