[package]
name = "KiggyMetric"
version = "0.1.0"
authors = ["Fay Carsons <faycarsons23@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "*", features = ["desktop", "router"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4.38"

[build-dependencies]
dotenv = "0.15.0"
